--- a/src/components/Header/Header.styl
+++ b/src/components/Header/Header.styl
@@ -30,15 +30,25 @@ ul
     text-align: center
 li
     display: flex
+    flex-direction: column
     align-items: center
 
 a
     text-decoration: none
     color white
     transition: 0.5s
+.gold__line
+    sizer(0%, 1px)
+    background: #EDB614;
+
+    transition: .4s
 a:hover
     color: #EDB614;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+a:hover ~ .gold__line
+    width: 100%
+    margin-top 12px
+
 
 .burger
     cursor pointer
@@ -46,10 +56,10 @@ a:hover
     display: flex
     flex-direction: column
     justify-content: space-around
-    align-items: end
 .f__line
     sizer(31px, 2px)
     background: white
+
 .s__line
     sizer(23px, 2px)
     background: white
