add third section

--- a/src/components/QuestionSection2/QuestionSection2.styl
+++ b/src/components/QuestionSection2/QuestionSection2.styl
@@ -5,6 +5,7 @@ sizer(w,h)
 
 
 .QuestionSection2
+    margin-top:200px 
     sizer(100%, 503px)
     display: flex
     justify-content: center
@@ -104,7 +105,7 @@ sizer(w,h)
     margin: 0
 @media screen and  (max-width: 1440px) {
     .section{
-        sizer(90%, 503px)
+        sizer(80%, 503px)
     }
         
 }
