--- a/src/components/TelegramSection3/TelegramSection3.styl
+++ b/src/components/TelegramSection3/TelegramSection3.styl
@@ -11,7 +11,9 @@ sizer(w,h)
     sizer(100%,696px)
 
 .telegram__section
-    sizer(68%, 696px)
+    sizer(68%, 750px)
+    display: flex
+    gap 100px
 .text__container_t
     display: flex
     flex-direction: column
@@ -80,3 +82,86 @@ sizer(w,h)
     /* Ocean */
 
     color: #14EFE6;
+.con__for__absolute__el
+    position relative
+    sizer(390px, 624px)
+.telegram__icon
+    sizer(102px,102px)
+    position: absolute
+    top 0 
+    left 0 
+    z-index: 4
+.f__conector
+    position: absolute
+    top 50px
+    left -36px
+    z-index: 3
+.icon__conector__tg
+    position: absolute
+    top 36px
+    left -10px
+    z-index 5
+.img__t__section
+    position relative
+.icon__conector__img
+    position: absolute
+    top 427px
+    left 440px
+    z-index 7
+.img__comp
+    position: absolute
+    top 180px
+    left 0 
+    z-index 6
+.img__comp__blur
+    position: absolute
+    top 165px
+    left -70px
+    z-index 5
+.s__conector
+    position: absolute
+    top 460px
+    left 215px
+.capital
+    position: absolute
+    top 477px
+    left 110px
+    z-index 7
+.text__capital
+    position: absolute
+    top 507px 
+    left -100px
+    /* Desktop/Tag */
+
+    font-family: 'Iceland';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 75%;
+    /* identical to box height, or 10px */
+
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+
+    /* Gold */
+
+    color: #EDB614;
+.icon__conector__capital
+    position: absolute
+    top 564px 
+    left 145px
+    z-index 8
+.t__conector
+    position: absolute
+    top 570px 
+    left 8px
+.user__icon__con
+    display: flex
+    position: absolute
+    top 650px 
+    left -37px
+.user__icon__con img
+    margin-left 20px
+
+@media screen and (max-width: 1440px) {
+}
