--- a/src/components/BannerSection1/BannerSection1.styl
+++ b/src/components/BannerSection1/BannerSection1.styl
@@ -13,8 +13,8 @@ sizer(w,h)
     background-size: cover;
 .cyberpunk__girl
     position: absolute
-    top: 100px
-    left: 1200px
+    top: 80px
+    left: 1190px
     z-index 1
     transform: matrix(1, 0, 0, 1, 0, 0);
     animation: 2s infinite alternate imgrotate;
@@ -27,6 +27,7 @@ sizer(w,h)
     left: 10px
     z-index 0
 .text__con
+    position relative
     margin-top 154px
     margin-left 132px
     display: flex
@@ -145,6 +146,7 @@ sizer(w,h)
 
 
 .arrow
+    z-index: 10
     cursor: pointer
     position: fixed
     bottom: 27px
@@ -157,12 +159,16 @@ sizer(w,h)
     transform: matrix(1, 0, 0, 1, 0, 0);
   }
   to {
-    transform: matrix(1, -0.07, -0.07, 1, 0, 0);
+    transform: matrix(1, -0.09, -0.09, 1, 0, 0);
   }
 }
 
 @media screen and (max-width: 1440px) {
   .cyberpunk__girl {
-    left 900px
+    left 830px
   }
+
+    .text__con{
+        margin-top: 120px 
+    }
 }
