Add menu , fix warnings

--- a/src/components/Header/Header.styl
+++ b/src/components/Header/Header.styl
@@ -61,11 +61,20 @@ a:hover ~ .gold__line
     background: white
 
 .s__line
+    transition 0.3s
     sizer(23px, 2px)
     background: white
 .t__line
     sizer(40px, 2px)
     background: white
+
+
+#menu_open
+   display none
+   z-index 9998
+   position fixed
+   top 0
+   sizer(197vh,100vh)
 
 
 
