Add fourth section

--- a/src/components/Header/Header.styl
+++ b/src/components/Header/Header.styl
@@ -55,6 +55,7 @@ a:hover ~ .gold__line
     sizer(40px, 40px)
     display: flex
     flex-direction: column
+    align-items: flex-end
     justify-content: space-around
 .f__line
     sizer(31px, 2px)
@@ -70,11 +71,12 @@ a:hover ~ .gold__line
 
 
 #menu_open
-   display none
-   z-index 9998
-   position fixed
-   top 0
-   sizer(197vh,100vh)
+    display: none
+    transition: 0.4s
+    z-index 9998
+    position fixed
+    top 0
+    sizer(100%,100vh)
 
 
 
